--- a/public/index.html
+++ b/public/index.html
@@ -22,51 +22,51 @@
     -->
 
     <!-- Primary Meta Tags -->
-    <title>Energy Charts - Explore and Communicate Energy Scenarios</title>
+    <title>TIMES-Ireland Model - Energy Security Study 2022</title>
     <meta
       name="title"
-      content="Energy Charts - Explore and Communicate Energy Scenarios"
+      content="TIMES-Ireland Model - Energy Security Study 2022"
     />
     <meta
       name="description"
-      content="Need to communicate energy scenarios to stakeholders? Or debug energy modelling results? Energy Charts is a web app designed to help with that. It is open source."
+      content="TIMES-Ireland Model - Energy Security Study 2022."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://energy-charts.netlify.app/" />
+    <meta property="og:url" content="https://tim-energy-security-2022.netlify.app/" />
     <meta
       property="og:title"
-      content="Energy Charts - Explore and Communicate Energy Scenarios"
+      content="TIMES-Ireland Model - Energy Security Study 2022"
     />
     <meta
       property="og:description"
-      content="Need to communicate energy scenarios to stakeholders? Or debug energy modelling results? Energy Charts is a web app designed to help with that. It is open source."
+      content="TIMES-Ireland Model - Energy Security Study 2022."
     />
     <meta
       property="og:image"
-      content="https://energy-charts.netlify.app/image.png"
+      content="https://tim-energy-security-2022.netlify.app/image.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://energy-charts.netlify.app/" />
+    <meta property="twitter:url" content="https://tim-energy-security-2022.netlify.app/" />
     <meta
       property="twitter:title"
-      content="Energy Charts - Explore and Communicate Energy Scenarios"
+      content="TIMES-Ireland Model - Energy Security Study 2022"
     />
     <meta
       property="twitter:description"
-      content="Need to communicate energy scenarios to stakeholders? Or debug energy modelling results? Energy Charts is a web app designed to help with that. It is open source."
+      content="TIMES-Ireland Model - Energy Security Study 2022."
     />
     <meta
       property="twitter:image"
-      content="https://energy-charts.netlify.app/image.png"
+      content="https://tim-energy-security-2022.netlify.app/image.png"
     />
     <script
       async
       defer
-      data-domain="energy-charts.netlify.app"
+      data-domain="tim-energy-security-2022.netlify.app"
       src="https://plausible.io/js/plausible.js"
     ></script>
   </head>
